deployment/kuber/dashboard.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: dashboard
  labels:
    app: glossary
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: glossary
        component: dashboard
    spec:
      containers:
      - name: dashboard
        image: solomkinmv/dashboard
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9001
        livenessProbe:
          initialDelaySeconds: 30
          periodSeconds: 30
          httpGet:
            path: /actuator/health
            port: 9001
        resources:
          limits:
            memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  labels:
    app: glossary
spec:
  ports:
  - nodePort: 30901
    port: 9001
  selector:
    app: glossary
    component: dashboard
  type: NodePort
