deployment/kuber/gateway.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gateway
  labels:
    app: glossary
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: glossary
        component: gateway
    spec:
      containers:
      - name: gateway
        image: solomkinmv/gateway
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8008
        livenessProbe:
          initialDelaySeconds: 15
          periodSeconds: 15
          httpGet:
            path: /actuator/health
            port: 8008
        resources:
          limits:
            memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  labels:
    app: glossary
spec:
  ports:
  - port: 8008
    targetPort: 8008
  selector:
    app: glossary
    component: gateway
  type: LoadBalancer
