deployment/kuber/image-service.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: image-service
  labels:
    app: glossary
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: glossary
        component: image-service
    spec:
      containers:
      - name: image-service
        image: solomkinmv/image-service
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8084
        livenessProbe:
          initialDelaySeconds: 30
          periodSeconds: 30
          httpGet:
            path: /actuator/health
            port: 8084
        resources:
          limits:
            memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: image-service
  labels:
    app: glossary
spec:
  ports:
  - port: 8084
    nodePort: 30884
  selector:
    app: glossary
    component: image-service
  type: NodePort
#  clusterIP: None
