deployment/kuber/keycloak.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-keycloak
spec:
  ports:
  - port: 3306
  selector:
    app: mysql-keycloak
  clusterIP: None
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: mysql-keycloak
spec:
  selector:
    matchLabels:
      app: mysql-keycloak
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql-keycloak
    spec:
      containers:
      - image: mysql:5.7.22 # mysql v8 doesn't work with keycloak 4.1.0, there is some bug
        name: mysql-keycloak
        ports:
        - containerPort: 3306
          name: mysql-keycloak
        volumeMounts:
        - name: mysql-keycloak-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-keycloak-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-keycloak-claim
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: keycloak
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: jboss/keycloak:4.1.0.Final
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8080
        - name: management
          containerPort: 9090
        resources:
          limits:
            memory: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  ports:
  - nodePort: 30880
    port: 8080
  - port: 8080
  selector:
    app: keycloak
  type: NodePort
