deployment/kuber/mongodb.yml

apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    name: mongo
    app: glossary
spec:
  ports:
  - port: 27017
    targetPort: 27017
  clusterIP: None
  selector:
    app: glossary
    role: mongo

---

apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: mongo
  labels:
    app: glossary
spec:
  serviceName: "mongo"
  replicas: 1
  template:
    metadata:
      labels:
        role: mongo
        app: glossary
        environment: test
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: mongo
        image: mongo:4.0.3
        imagePullPolicy: Always
        #        env:
        # Use secret in real usage
        #        - name: MONGO_INITDB_ROOT_USERNAME
        #          value: "mongo_user"
        #        - name: MONGO_INITDB_ROOT_PASSWORD
        #          value: "pswrd"
        #        - name: MONGO_INITDB_DATABASE
        #          value: "stats"
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: local-claim
          mountPath: /data/db
      - name: mongo-sidecar
        image: cvallance/mongo-k8s-sidecar
  volumeClaimTemplates:
  - metadata:
      name: local-claim
      labels:
        app: glossary
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: local-storage
      resources:
        requests:
          storage: 1Gi
