deployment/kuber/rabbitmq.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: rabbitmq
  labels:
    app: glossary
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: glossary
        component: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:management
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5672
        - containerPort: 15672
        resources:
          limits:
            memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  labels:
    app: glossary
spec:
  ports:
  - port: 5672
    targetPort: 5672
    name: queue-port
  - nodePort: 30762
    port: 15672
    name: management-port
  selector:
    app: glossary
    component: rabbitmq
  type: NodePort
