deployment/kuber/statistics-service.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: statistics-service
  labels:
    app: glossary
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: glossary
        component: statistics-service
    spec:
      containers:
      - name: statistics-service
        image: solomkinmv/statistics-service
        imagePullPolicy: Always
        ports:
        - containerPort: 8086
        livenessProbe:
          initialDelaySeconds: 30
          periodSeconds: 30
          httpGet:
            path: /actuator/health
            port: 8086
        resources:
          requests:
            memory: 256Mi
            cpu: 0.1
          limits:
            memory: 512Mi
            cpu: 0.5
---
apiVersion: v1
kind: Service
metadata:
  name: statistics-service
  labels:
    app: glossary
spec:
  ports:
  - port: 8086
    nodePort: 30886
  selector:
    app: glossary
    component: statistics-service
  type: NodePort
