deployment/kuber/translate-service.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: translate-service
  labels:
    app: glossary
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: glossary
        component: translate-service
    spec:
      containers:
      - name: translate-service
        image: solomkinmv/translate-service
        imagePullPolicy: Always
        ports:
        - containerPort: 8082
        livenessProbe:
          initialDelaySeconds: 30
          periodSeconds: 30
          httpGet:
            path: /actuator/health
            port: 8082
        resources:
          limits:
            memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: translate-service
  labels:
    app: glossary
spec:
  ports:
  - port: 8082
    nodePort: 30882
  selector:
    app: glossary
    component: translate-service
  type: NodePort
