deployment/kuber/tts-service.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: tts-service
  labels:
    app: glossary
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: glossary
        component: tts-service
    spec:
      containers:
      - name: tts-service
        image: solomkinmv/tts-service
        imagePullPolicy: Always
        ports:
        - containerPort: 8083
        livenessProbe:
          initialDelaySeconds: 30
          periodSeconds: 30
          httpGet:
            path: /actuator/health
            port: 8083
        resources:
          limits:
            memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: tts-service
  labels:
    app: glossary
spec:
  ports:
  - port: 8083
    nodePort: 30883
  selector:
    app: glossary
    component: tts-service
  type: NodePort
