deployment/kuber/zipkin.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: zipkin
  labels:
    app: glossary
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: glossary
        component: zipkin
    spec:
      containers:
      - name: zipkin
        image: openzipkin/zipkin
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9411
        livenessProbe:
          initialDelaySeconds: 30
          periodSeconds: 30
          httpGet:
            path: /actuator/health
            port: 9411
        resources:
          limits:
            memory: 768Mi
---
apiVersion: v1
kind: Service
metadata:
  name: zipkin
  labels:
    app: glossary
spec:
  ports:
  - nodePort: 30941
    port: 9411
  selector:
    app: glossary
    component: zipkin
  type: NodePort
