deployment/kuber/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: glossary-ingress
  labels:
    app: glossary
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: gateway
          servicePort: 8008
